fix: adjust font sizes in latest episodes section and footer for better readability

--- a/css/styles.css
+++ b/css/styles.css
@@ -139,7 +139,7 @@ h1, h2, h3 {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
 }
 
 .latestEpisodes > a {
@@ -234,9 +234,9 @@ h1, h2, h3 {
 .footer {
     text-align: center;
     font-style: italic;
-    font-size: 2rem;
+    font-size: 1.25rem;
     padding: 1rem;
     color: var(--mountainFog);
     text-shadow: 1px 1px 2px #000000a1;
-    margin-top: 5vh;
+    margin-top: 3vh;
 }
